fixing preview img panes to be display block so they dont align weird. making background white as per request

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -340,4 +340,7 @@ h5{
 }
 .modal .preview_wrap img{
   max-width: 100%;
+  display:block;
+  margin:auto;
+  margin-bottom:2px;
 }
